<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="analyse">Analyse</string>
    <string name="analyse_failed">Analyze failed, please try again later</string>
    <string name="apk_download_done">Download complete，click to install！</string>
    <string name="app_name">VidMate</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"https://www.vidmateapp.com\",
 }
}]"</string>
    <string name="bt">BT</string>
    <string name="bt_checking">Checking...</string>
    <string name="bt_connecting">Connecting...</string>
    <string name="bt_counting">Counting...</string>
    <string name="bt_seeding">Seeding...</string>
    <string name="bt_speeding_up">Speeding up...</string>
    <string name="bt_waiting">Waiting...</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_notification_channel_id" />
    <string name="default_web_client_id">448220499576-al1qjmcdmam480rs4dbrqeehqhr58h8a.apps.googleusercontent.com</string>
    <string name="download_done">Download Complete</string>
    <string name="download_preparing">Download Preparing…</string>
    <string name="facebook_app_id">2148648092054243</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="g_add">Add</string>
    <string name="g_also_like_these_movies">Also like these movies</string>
    <string name="g_also_like_these_videos">Also like these videos</string>
    <string name="g_analysing">Analysing</string>
    <string name="g_audio_downloading">Audio downloading...</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_change">Change</string>
    <string name="g_close">Close</string>
    <string name="g_confirm">Confirm</string>
    <string name="g_connecting">Connecting</string>
    <string name="g_continue">Continue</string>
    <string name="g_data_empty">No data</string>
    <string name="g_data_error">Data error, try again</string>
    <string name="g_data_exception">Data exception, try again</string>
    <string name="g_default">Default</string>
    <string name="g_delete">Delete</string>
    <string name="g_discover">Discover</string>
    <string name="g_done">Done</string>
    <string name="g_download">Download</string>
    <string name="g_exit">Exit</string>
    <string name="g_export">Export</string>
    <string name="g_failed">Failed</string>
    <string name="g_hide">Hide</string>
    <string name="g_import">Import</string>
    <string name="g_install">Install</string>
    <string name="g_later">Later</string>
    <string name="g_merge">Merge</string>
    <string name="g_merge_no_space">Merge fail, no space</string>
    <string name="g_merging">Merging</string>
    <string name="g_more">More</string>
    <string name="g_musics">Music</string>
    <string name="g_network_error">Network error, try later</string>
    <string name="g_no">No</string>
    <string name="g_no_continue">No,Continue</string>
    <string name="g_no_result_to_select">No Results. Please Reselect.</string>
    <string name="g_no_space">No space</string>
    <string name="g_num_k">K</string>
    <string name="g_num_m">M</string>
    <string name="g_ok">OK</string>
    <string name="g_open">Open</string>
    <string name="g_paused">Paused</string>
    <string name="g_play">Play</string>
    <string name="g_playall">Play all</string>
    <string name="g_playasmusic">Play as Music</string>
    <string name="g_recommend">Recommend</string>
    <string name="g_rename">Rename</string>
    <string name="g_retry">Retry</string>
    <string name="g_same_artist">Same artist</string>
    <string name="g_signin">Sign in</string>
    <string name="g_stop">Stop</string>
    <string name="g_submit">Submit</string>
    <string name="g_task_empty">No task yet</string>
    <string name="g_time_out">Time out</string>
    <string name="g_translate">Translate</string>
    <string name="g_unknown">Unknown</string>
    <string name="g_unselect_all">UnSelect All</string>
    <string name="g_viewall">View All</string>
    <string name="g_waitfor_wifi">Waiting for WiFi</string>
    <string name="g_waitint">Waiting</string>
    <string name="g_yes">Yes</string>
    <string name="gcm_defaultSenderId">448220499576</string>
    <string name="getting_video_info">Getting video info...</string>
    <string name="go">GO</string>
    <string name="google_api_key">AIzaSyAqBik87CHdNC3bLtsuXefvP0_ltxVStxQ</string>
    <string name="google_app_id">1:448220499576:android:6100b9cdc29f45b8d7278d</string>
    <string name="google_crash_reporting_api_key">AIzaSyAqBik87CHdNC3bLtsuXefvP0_ltxVStxQ</string>
    <string name="google_storage_bucket">funapp-11e43.appspot.com</string>
    <string name="link_expired">Link expired</string>
    <string name="more_download_links">More Download Links</string>
    <string name="multi_apk_downloaded">Download Completed and install now!</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="notice_update">"New Version Downloaded
One-key Install"</string>
    <string name="notification_title_fast_download">Click to fast download video</string>
    <string name="project_id">funapp-11e43</string>
    <string name="quick_search">Quick Search</string>
    <string name="ready_to_install">Ready to Install</string>
    <string name="saver_whatsapp_success_toast">Saved to Gallery</string>
    <string name="share_link"><u>https://www.vidmate.tv/</u></string>
    <string name="single_apk_downloaded">"Download Completed.
Ready to install now!"</string>
    <string name="skip_choose_language">Skip ></string>
    <string name="speed_up">Speed up</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="task_add_view">View</string>
    <string name="video_download_done">Download complete，click to play！</string>
    <string name="vidmate_ad_wall_history_title">Recently Games</string>
    <string name="g_select_all">Select All</string>
    <string name="g_setting">SETTING</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="hot_music">Hot Music</string>
    <string name="my_files">My Files</string>
    <string name="notify_sites">Sites</string>
    <string name="search_video_and_download">Search video and download</string>
    <string name="trending">Trending</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="notification_search">Search</string>
    <string name="notification_clean">Clean</string>
    <string name="notification_boost">Boost</string>
    <string name="notification_battery_saver">Battery saver</string>
    <string name="notification_more">More</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">9529d353f8f04dd8afafccb45f46e86b</string>
    <string name="convert_done">Convert Complete</string>
    <string name="download_video_and_music">Download video and music</string>
    <string name="g_convert_audio">Convert to music</string>
    <string name="g_my_library">My Library</string>
    <string name="apk_installed_done">Installation is successful, click to start the application!</string>
</resources>
